# ChangeLog for sys-apps/x86info
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/x86info/ChangeLog,v 1.22 2009/02/11 00:13:35 robbat2 Exp $

*x86info-1.24 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +x86info-1.24.ebuild:
  Version bump.

*x86info-1.23 (29 Dec 2008)

  29 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +x86info-1.23.ebuild:
  Version bump, has Intel i7 stuff.

  17 Apr 2008; Kenneth Prugh <ken69267@gentoo.org> x86info-1.21.ebuild:
  amd64 stable, bug #215075

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> x86info-1.21.ebuild:
  x86 stable

*x86info-1.21 (27 Nov 2007)

  27 Nov 2007; Robin H. Johnson <robbat2@gentoo.org> +files/1.21-pic.patch,
  +x86info-1.21.ebuild:
  Version bump.

  24 Apr 2007; Christian Faulhammer <opfer@gentoo.org> x86info-1.20.ebuild:
  stable amd64, bug 175732

  23 Apr 2007; Robin H. Johnson <robbat2@gentoo.org> -x86info-1.12b.ebuild,
  -x86info-1.13.ebuild, -x86info-1.14.ebuild, -x86info-1.15.ebuild,
  -x86info-1.17.ebuild, -x86info-1.18.ebuild:
  Cleanup old versions.

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> x86info-1.20.ebuild:
  x86 stable

*x86info-1.20 (30 Sep 2006)

  30 Sep 2006; Robin H. Johnson <robbat2@gentoo.org> +x86info-1.20.ebuild:
  Version bump.

  30 Sep 2006; Robin H. Johnson <robbat2@gentoo.org> x86info-1.18.ebuild:
  Add ~amd64 so I can use it.

*x86info-1.18 (08 Sep 2006)

  08 Sep 2006; Robin H. Johnson <robbat2@gentoo.org> +x86info-1.18.ebuild:
  Bug #146169, version bump.

*x86info-1.17 (24 Jan 2006)

  24 Jan 2006; Robin H. Johnson <robbat2@gentoo.org> +x86info-1.17.ebuild:
  Version bump, bug #119048.

  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update metadata.

*x86info-1.15 (02 Sep 2005)

  02 Sep 2005; Mike Frysinger <vapier@gentoo.org> +x86info-1.15.ebuild:
  Version bump #103577 by Ulrich Mueller.

*x86info-1.14 (24 Aug 2005)
