@@ -2,7 +2,9 @@ AUX ifd-gempc-1.0.4-respect_LDFLAGS.patch 1640 RMD160 cd68a956be815d9228050ee7f3
 AUX reader.conf 246 RMD160 1e02a6da021cf8deb3e18fd481df668a02cf400b SHA1 dda1a746cd1367d83c5667c75bdb8fcd712b7094 SHA256 e5c27f84c490f45f3c3fbaaffebe502bc8499795905888345a83d75f70218aee
 DIST ifd-gempc-1.0.3.tar.gz 303831 RMD160 31fb52bb83d7c284bcbc16e04e24554babc64f0a SHA1 8a17e6ea6ab45325f2d897ce09edc63be84b78f2 SHA256 827b58f8f12483bbbcf37fbeb93715aeef152f4c0085251ace7da967df9b12d8
 DIST ifd-gempc-1.0.4.tar.gz 305102 RMD160 214985d0386d82319c42d309d46613a3bc771192 SHA1 39b12896d8f943424aa137fc9129b742970838d0 SHA256 7c80b12a0ed6ace161e1408bbf2d32674d9960413824fe689ac5eb14a5171bdb
+DIST ifd-gempc-1.0.5.tar.gz 75838 RMD160 17731c7e85359adc3177f5b7f214662ea7c0c6af SHA1 280e907fbc6d0b34d399c2eaa34fa9da41ee5bec SHA256 11897da6702f3ea5920175576c6f19b0d122bc8ec34c3154a6abad9573fab68d
 EBUILD ifd-gempc-1.0.3.ebuild 1566 RMD160 022b95ea25339ce242a5445eb5325c578eb2d463 SHA1 b12412d43a70d48993ef266b096cb271ab67470e SHA256 ed6fd3629b5029f3fef53956b088cd0394e1897410e2bc888e320d8717353969
 EBUILD ifd-gempc-1.0.4.ebuild 1680 RMD160 e29a7713b2403a18824ab9e62c3972ca339c61f6 SHA1 69536419cb3a9afe7f02877409743cf3d0ddb969 SHA256 66120d6182d1d805c819ac8aff1b75e9002c54f9f0df39eacac2c507147511c1
-MISC ChangeLog 2614 RMD160 cd5ff845235586039cc4a67dedd0421af5edb99c SHA1 9104334969004c6adad762cd28ab644f90b4f303 SHA256 892164ee9ed90b7866a495d6f21092a32b6ff53b5c2e7686f32f9b8623ed18d3
+EBUILD ifd-gempc-1.0.5.ebuild 1658 RMD160 c9f53f3fb6f968573d6475816c08e453231332c8 SHA1 85224047232b0347002361fbcf6c90b390a40b29 SHA256 92406930217a21bd5ab5fdf43ef7e4151a8438af38442d583bdcc206adfb6875
+MISC ChangeLog 2763 RMD160 44463bccc77c58feee0c8f93ac4877d75191d12e SHA1 4210fc91454495d0dd65574ac3312cfe76d07b3d SHA256 c6b894e0d07f2030ec40aec0137df638b5eff2b0e1ccc8c8b00e1388b47b7f55
 MISC metadata.xml 315 RMD160 93a7f942f2f279df1959ce7b8fdb482c1f5e6ed9 SHA1 4681859d7d7c68b5bd7d37a6b6e429b20cad729f SHA256 46fae106f99247755d60ff913fc885ed505ab6b8eb178bfc70fbed84236961cd
