@@ -8,6 +8,7 @@ DIST x86info-1.24.tgz 78874 RMD160 e6d9db7933f48a27fe88724f385c568fcc7cbec2 SHA1
 EBUILD x86info-1.20.ebuild 1178 RMD160 3696582acfb6b6f44796e69933cdaf2e7c6edec6 SHA1 049744375e004a7eb7b5ae4c87405d3df6bf59ab SHA256 ef42710a6150bc794292c280a5140f4ac13479e78bf76d3db72b5a509c705662
 EBUILD x86info-1.21.ebuild 1180 RMD160 d6430d463de057178e2ecd39c08dd0a737c9b047 SHA1 c4f5c96ce7305d846327fc0db2aa0c7b72045ea6 SHA256 c44f5252193f6268581b0c1c2f54897bc1d2ef33fc562f917e55061eed500964
 EBUILD x86info-1.23.ebuild 1181 RMD160 4b236d2562915a8088c53b1e908a24419d6acb96 SHA1 81e38c1000ab1b3bd52bf05364acc3611043fcc4 SHA256 f1b957b12ddba7fee17a38c5019e5209dc2ed2adee4fbe37d02306a9ad5f5614
+EBUILD x86info-1.24-r1.ebuild 1461 RMD160 25a692ebf968b60cbe75e2e435276ab30e157c64 SHA1 f38c4b283052253a98dd1cc7f3e8bc7095e32fe9 SHA256 4f041c502ae4f9f3525b4b55e8c56603b1b9a371d2256c799a782fbdbb789abe
 EBUILD x86info-1.24.ebuild 1181 RMD160 02a3f3fa30a16f6b0ad228f7d2f8cc1cec59d08e SHA1 e5daeecb12c6ad05b954885322e9ca267f4f0779 SHA256 e13a71d233b7c50fa5f5284bf16b47c3f92ce7cdbbbab385b26f8a34551a68ba
-MISC ChangeLog 3018 RMD160 0ba4cc3d0da4cbe022ad28613ee86daf9e3edf85 SHA1 c8bedf302df33075a2351cdac690045000176c11 SHA256 e6461b88000c9c184c16d97f378de0a714326b011fd8249cf0e9e9b93c32984a
+MISC ChangeLog 3224 RMD160 be5bd7b7caf485079b01f29203dfed1b7f069cdf SHA1 6570315a4c158dbf8973075d723fb178edd2b97d SHA256 e93e7da0a8c0d1e7b9908c2170d231501ce76cc3690ca6f16b6f3e353c38a086
 MISC metadata.xml 227 RMD160 e54f63c709ba122fa8d5931652deb3821a967981 SHA1 84c05df3fda91de26beaaf15ffdbf4ea15b3784b SHA256 eb6179099f91f31168c95bd4a018a01f37aa1eb8d9ba8d3ed039056bac71bcf8
